responsive text fix on mobile devices

--- a/style.css
+++ b/style.css
@@ -283,8 +283,8 @@ footer {
   }
 /* section */
   section.section.section-a p {
-    font-size: 18px;
-    height: 100%;
+    width: 100%;
+    left: 1%;
   }
  }
 
